# AIE7

./: ACTIVITIES.md  README.md  readme_new
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  QUESTION_ANSWERS.md  uv.lock.backup
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  homework1.ipynb
100_Certification_challenge/: .env.example  .gitignore  Movie_RAG_System.ipynb  Movie_Reviews_Retriever_Evaluation.ipynb  RAG_AGENTIC_SOLUTION_PLAN.md  README.md  README_FRONTEND.md  launch_frontend.sh  main.py  movie_rag_frontend.py  movie_rag_system.py  movie_reviews_rag_system.ipynb  precomputed_ragas_scores.csv  pyproject.toml  requirements_frontend.txt  setup_env.py  setup_frontend.py  test_search.py  written_document_answers.ipynb
10_Open_DeepResearch/: open-deep-research.ipynb
14_LangGraph_Platform/: README.md
15_A2A_LangGraph/: README.md  requirements.txt
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
(+17 files in other folders)
