[project]
name = "movie-reviews-rag-agentic"
version = "0.1.0"
description = "End-to-end RAG agentic solution for movie reviews analysis"
authors = [
    {name = "AI Makerspace", email = "info@aimakerspace.org"}
]
dependencies = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.7.0",
    "pydantic>=2.0.0",
    "dataclasses-json>=0.6.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.17.0",
    "tavily-python>=0.3.0",
    "langchain-tavily>=0.1.0",
    "google-search-results>=2.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ragas>=0.1.0",
    "rapidfuzz>=3.0.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "textstat>=0.7.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
